src/objects/ICG_Account_Role_Detail_Relationship__c.object
<CustomObject>
    <label>OS Account Role Detail Relationship</label>
    <description>One Source Account Role Detail Relationship</description>
    <nameField>
        <displayFormat>ARDRelationship-{000000000}</displayFormat>
        <label>OS Account Role Detail Relationship</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OS Account Role Detail Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Handled_Airline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Account</description>
        <label>Handled Airline</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ONE Source Account Role Detail Relationships</relationshipLabel>
        <relationshipName>ICG_Account_Role_Detail_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ICG_Account_Role_Detail__c</fullName>
        <description>Master to facility</description>
        <label>ONE Source Account Role Detail</label>
        <referenceTo>ICG_Account_Role_Detail__c</referenceTo>
        <relationshipLabel>ONE Source Account Role Detail Relationships</relationshipLabel>
        <relationshipName>ICG_Account_Role_Detail_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ICG_ARD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Account Role Detail</description>
        <label>ONE Source ARD Linked</label>
        <referenceTo>ICG_Account_Role_Detail__c</referenceTo>
        <relationshipLabel>ONE Source Account Role Detail Relationships (ICG ARD Linked)</relationshipLabel>
        <relationshipName>ICG_Account_Role_Detail_Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>